# isixhosa_click

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE.md  Makefile  README.md  build.rs
common/: Cargo.toml
common/src/: auth.rs  database.rs  format.rs  i18n.rs  language.rs  lib.rs  serialization.rs  templates.rs  types.rs
common/templates/: all.askama.html  all.list.askama.html  macros.askama.html  word_details.askama.html
dummy_www/: .gitkeep
macros/: Cargo.toml
macros/src/: lib.rs
pages/: 404.html
pwa/: Cargo.toml
pwa/src/: lib.rs
server/: Cargo.toml  askama.toml  build.rs  with_jaeger_debug.sh
server/icons/: README.md
server/src/: admin.rs  auth.rs  config.rs  database.rs  details.rs  edit.rs  export.rs  i18n.rs  import.rs  import_zulu.rs  main.rs  moderation.rs  search.rs  serialization.rs  session.rs  submit.rs  user_management.rs
server/src/database/: deletion.rs  submit.rs  suggestion.rs  user.rs
server/src/import/: isindebele_birds.rs  medical_glossary.rs  zulu_lsp.rs
server/src/sql/: dataset_attribution_suggestions.sql  dataset_attributions.sql  datasets.sql  example_suggestions.sql  linked_word_suggestions.sql  users.sql  word_deletion_suggestions.sql  words.sql
server/static/: add_dataset.css  details.css  form.js  isixhosa_wordle.js  isixhosa_wordle_bg.wasm  live_search.js  moderation.css  settings.css  signup.css  site_settings.css  style.css  submit.css  wordle.css  wordle.js
server/static/submit/: duplicate.js  example.js  linked_word.js  util.js
server/templates/: 404.askama.html  about.askama.html  add_dataset.askama.html  moderation.askama.html  offline.askama.html  redirect.askama.html  search.askama.html  search_box.askama.html  service_worker.askama.js  settings.askama.html  sign_up.askama.html  site_settings.askama.html  style_guide.askama.html  submit.askama.html  terms_of_use.askama.html  wordle.askama.html
server/translations/: shared.ftl
server/translations/locales/: shared.ftl
server/translations/locales/en-ZA/: main.ftl
server/translations/locales/xh/: main.ftl
server/translations/locales/zu/: main.ftl
server/translations/site-specific/isindebele/: shared.ftl
server/translations/site-specific/isindebele/en-ZA/: main.ftl
server/translations/site-specific/isixhosa/: shared.ftl
server/translations/site-specific/isixhosa/en-ZA/: main.ftl
server/translations/site-specific/isixhosa/xh/: main.ftl
server/translations/site-specific/isixhosa/zu/: main.ftl
server/translations/site-specific/isizulu/: shared.ftl
server/translations/site-specific/isizulu/en-ZA/: main.ftl
server/translations/site-specific/isizulu/zu/: main.ftl
src/: accept.rs  anki.css  auth.rs  backup.rs  database.rs  details.rs  edit.rs  export.rs  format.rs  language.rs  main.rs  moderation.rs  search.rs  serialization.rs  session.rs  submit.rs  typesense.rs  typesense_schema.json
src/database/: deletion.rs  existing.rs  submit.rs  suggestion.rs  user.rs
src/sql/: example_deletion_suggestions.sql  example_suggestions.sql  examples.sql  linked_word_deletion_suggestions.sql  linked_word_suggestions.sql  linked_words.sql  login_tokens.sql  user_attributions.sql  users.sql  verification_emails.sql  word_deletion_suggestions.sql  word_suggestions.sql  words.sql
static/: accept.css  details.css  live_search.js  manifest.webmanifest  moderation.css  search.css  service_worker.js  signup.css  style.css  submit.css
static/submit/: duplicate.js  example.js  linked_word.js  part_of_speech_specific.js  util.js
templates/: 404.askama  404.askama.html  404.html  about.askama  about.askama.html  about.html  accept.html  index.html  macros.askama  macros.askama.html  macros.html  moderation.askama  moderation.askama.html  moderation.html  offline.askama.html  search.askama  search.askama.html  search.html  search_box.askama.html  search_box.html  service_worker.askama.js  sign_up.askama.html  style_guide.askama.html  submit.askama  submit.askama.html  submit.html  terms_of_use.askama.html  word_details.askama  word_details.askama.html  word_details.html
wasm/: Cargo.toml
wasm/pwa/: Cargo.toml
wasm/pwa/src/: lib.rs
wasm/wordle/: Cargo.toml  wordle.js  words.csv
wasm/wordle/.cargo/: config
wasm/wordle/src/: i18n.rs  lib.rs  main.rs
wordle/: Cargo.toml
wordle/src/: main.rs
