[package]
name = "isixhosa_server"
version = "0.1.0"
authors = ["Restioson <restiosondev@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"
serde_qs = "0.8"
serde_with = "1.8"
fallible-iterator = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
warp = { version = "0.3", features = ["tls"] }
# Pinned to rev to stop need for random .clone()s in templates - waiting for askama 0.11
askama = { git = "https://github.com/djc/askama", rev = "ed2e640" }
# Waiting for my PR to be merged
html-minifier = { git = "https://github.com/Restioson/html-minifier", branch = "master" }
rusqlite = { version = "0.25", features = ["bundled"] } # bundled to give 3.35 assuredly
log = "0.4"
log4rs = "1"
chrono = "0.4"
r2d2 = "0.8"
serde_json = "1"
r2d2_sqlite = "0.18"
num_enum = "0.5.4"
unicode-normalization = "0.1"
xtra = { version = "0.5", features = ["with-tokio-1"] }
async-trait = "0.1"
tantivy = "0.15"
anyhow = "1"
num_cpus = "1"
confy = "0.4"
isixhosa = { version = "0.1.0", features = ["with-serde-1", "with-num_enum-0_5"] }

smallvec = ">=1.6.1" # for rustsqlite - fixes vulnerability
