[package]
name = "isixhosa_common"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["serde-json"] }
askama_warp = { version = "0.13.0", optional = true }
serde = "1.0.133"
isixhosa = { version = "0.2.0", features = ["with-serde-1", "with-num_enum-0_7"] }
num_enum = "0.7.2"

rusqlite = { version = "0.25", features = ["chrono"], optional = true }
tracing = { version = "0.1.29", features = ["attributes"], optional = true }
r2d2 = { version = "0.8.9", optional = true }
r2d2_sqlite = { version = "0.18", optional = true }
fallible-iterator = { version = "0.2.0", optional = true }

[features]
server = ["rusqlite", "tracing", "r2d2", "r2d2_sqlite", "fallible-iterator", "askama_warp"]
