[package]
name = "isixhosa_pwa"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.90", features = ["serde-serialize"] }
isixhosa_common = { path = "../../common" }
askama = { git = "https://github.com/djc/askama", rev = "af552ee", features = ["serde-json"] }
