[package]
name = "isixhosa_wordle"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.1.6"
serde = { version = "1", features = ["derive"] }
rand = "0.8.4"
tinyvec = "1.5.1"
ascii = "1.0"
yew = "0.19.3"
log = "0.4.6"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.56", features = ["Document", "Element"] }
js-sys = "0.3.56"
gloo = "0.6.0"
getrandom = { version = "0.2", features = ["js"] }
chrono = "0.4.8"
