[package]
name = "isixhosa_wordle"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
csv = "1.1.6"
serde = { version = "1", features = ["derive"] }
rand = "0.8.4"
tinyvec = "1.5.1"
ascii = "1.0"
yew = "0.19.3"
log = "0.4.6"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.56", features = ["Document", "Element"] }
js-sys = "0.3.56"
gloo = { version = "0.11.0", default-features = false, features = ["utils", "events", "net"] }
unic-langid = { version = "0.9.5", features = ["serde"] }
getrandom = { version = "0.2", features = ["js"] }
chrono = "0.4.8"
anyhow = "1.0.86"
fluent-templates = "0.9.4"
itertools = "0.13.0"
isixhosa_common = { path = "../../common" }
askama = "0.12.1"
console_error_panic_hook = "0.1.7"
